# reroute53

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  main.cpp
src/aws_route53_dns_updater/: CMakeLists.txt  aws_route53_dns_updater.cpp
src/aws_route53_dns_updater/include/: aws_route53_dns_updater.hpp
src/external_ip/: CMakeLists.txt  my_external_ip.cpp
src/external_ip/include/: my_external_ip.hpp
src/interfaces/: CMakeLists.txt
src/interfaces/dns_address_record_update_interface/: dns_address_record_update_interface.cmake  dns_address_record_update_interface.hpp
src/interfaces/external_ip_interface/: external_ip_interface.cmake  external_ip_interface.hpp
